<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">food Now!!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="serverIP">Server IP:</string>
    <string name="serverPort">Port number:</string>
    <string name="connectButton">Connect to server!</string>
    <string name="userInput">Start your client.orders NOW!</string>
    <string name="userName">Name: </string>
    <string name="product">Pick a product: </string>
    <string name="title_activity_from_server1">YES! Server is up and running!</string>
    <string name="title_activity_user_input">Order Details</string>
    <string name="confirm">Confirm your client.orders</string>
    <string name="title_activity_current_connected">Confirm your client.orders</string>
    <string name="prompt">Select a Burrito</string>

    <string-array name="burrito_array">
        <item>Select a Burrito</item>
        <item>Grilled Chicken Burrito - $6.79</item>
        <item>Pulled Pork - $7.09</item>
        <item>Shredded Beef - $7.49</item>
        <item>Grilled Steak - $7.49</item>
        <item>Seasoned Ground Beef - $7.09</item>
        <item>Vegetarian - $6.79</item>
    </string-array>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_order_confirmed_fragment">OrderConfirmedFragment</string>
    <string name="title_activity_confirm_order_dialog">ConfirmOrderDialog</string>
    <string name="title_activity_add_to_plate_dialog">AddToPlateDialog</string>
    <string name="title_activity_home_tab">HomeTab</string>
    <string name="title_activity_menu_tab">MenuTab</string>
    <string name="title_activity_order_tab">OrderTab</string>
    <string name="title_activity_nutrition_tab">NutritionTab</string>

</resources>
